portfolio-app/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: portfolio-ns
  labels:
    app: portfolio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-app
  template:
    metadata:
      labels:
        app: portfolio-app
    spec:
      containers:
      - name: portfolio-pod
        image: elhaddaoui/hamzaportfolio:c3d000dc0fb9091811fe50b9b3335d39401e037f
        imagePullPolicy: IfNotPresent
      nodeSelector:
        node: home-applications
